# embeddy

./: .gitignore  README.md  SPEC.md  claude_chat_cost.py  pyproject.toml  session-ses_34a5.md
benchmarks/: __init__.py  bench_encoding.py  bench_pipeline.py  bench_resources.py  bench_search.py  helpers.py
docs/steps/: 01_exceptions.md  02_basic_models.md  03_result_models.md  04_embedder_config.md  05_runtime_config.md  06_config_file_loading.md  07_embedder_structure.md  08_basic_encode.md  09_encode_caching.md  10_similarity.md  11_search_basic.md  12_search_precomputed.md  13_package_init.md  14_project_config.md  15_integration_tests.md
src/embeddify/: __init__.py  config.py  embedder.py  exceptions.py  models.py
src/embeddy/: __init__.py  config.py  embedder.py  exceptions.py  models.py
src/embeddy/pipeline/: pipeline.py
tests/: conftest.py  test_chunking.py  test_cli.py  test_client.py  test_config.py  test_embedder.py  test_embedding.py  test_exceptions.py  test_ingest.py  test_integration.py  test_models.py  test_package_init.py  test_pipeline.py  test_search.py  test_server.py  test_store.py  test_wikipedia_example.py
tests/fixtures/configs/: invalid.yaml  valid.json  valid.yaml
